# data-analytics-lab

./: .dockerignore  .gitignore  Dockerfile  Home.py  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py  ventas_dataset_grande_corregido_con_paises.csv
pages/: 1_Analisis_Explotario_de_Datos.py  2_Data_Management.py
src/: data_manipulator.py  eda.py
src/pages/: 1_Analisis_Explotario_de_Datos.py
