[project]
name = "data-analytics-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "polars>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.38.0",
]
